fix: changed toList on Collectors.toList()